--- a/Client/src/styles/globals.css
+++ b/Client/src/styles/globals.css
@@ -17,7 +17,9 @@
 } */
 
 body {
-  background-color: rgb(208 231 255);
+  /* background-color: rgb(208 231 255); */
+  /* background-color: '#F8F8F8'; */
+  background-color: rgb(248, 248, 248);
 }
 
 .imageContainer {
