--- a/Client/src/styles/globals.css
+++ b/Client/src/styles/globals.css
@@ -33,3 +33,17 @@ body {
   width: 38%;
   border-radius: 8px;
 }
+
+.custom-scroll::-webkit-scrollbar {
+  width: 4px;
+  border-radius: 2px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: cadetblue;
+}
+
+.custom-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: cadetblue transparent;
+}
